# sage-population-dynamics-dashboard

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/changes/: feature_feat-8811.md
configs/: default.yaml
frontend/: package.json
frontend/src/: App.tsx
src/data/: feature_engineering_v2.py  feature_engineering_v3.py  loader.py  loader_v2.py  loader_v3.py  preprocessing.py  preprocessing_v2.py  preprocessing_v3.py
src/evaluation/: evaluator.py  metrics.py  visualization.py
src/metrics/: collector.py
src/models/: attention.py  attention_v2.py  attention_v3.py  backbone.py  backbone_v3.py  heads.py  heads_v2.py  heads_v3.py
src/schemas/: validator.py
src/serving/: api.py  inference.py
src/training/: optimizer.py  optimizer_v2.py  optimizer_v3.py  scheduler.py  trainer_v2.py  trainer_v3.py
src/types/: stubs.py
src/utils/: config.py  logging_utils.py  sage_connector.py
tests/: conftest.py  test_api.py  test_evaluation.py  test_loader.py  test_model.py  test_training.py
