[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sage-population-dynamics-dashboard"
version = "0.1.0"
description = "Interactive population dynamics forecasting dashboard with uncertainty quantification using UN Popul"
authors = [{name = "Kaushik Sarkar", email = "dr.kaushiks@hotmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
